[tool.poetry]
name = "lifecraft"
version = "0.0.1"
description = "Life simulator written in Python using Ursina Library"
authors = ["Jaro <jaroslav.henner@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
ursina = "3.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lifecraft = "lifecraft:lifecraft.main"